@@ -35,6 +35,7 @@ Legend:
   - Fix seeking
   - Fix volume slider going out of bounds with IE in player.html
   - Fix incorrect encoding of the parent dir's path in browser.html
+! MPC Video Decoder: Fix low merit internal filter.
 ! Ticket #2423, Fix wrong rounding leading to small black bars when resizing the window.
   This was mostly visible when using the "auto-fit" zoom or when resizing manually.
 ! Ticket #2783, Fix crash when generating the chapter marks
